<resources>
    <string name="app_name">MvvmWithHilt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
</resources>