<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:paddingBottom="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/please_sign_in_to_continue"
            android:textColor="@color/light_gray"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/light_gray" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text=""
            android:textColor="@color/red"
            android:textSize="12sp" />

        <Button
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:background="@color/light_gray"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>